Fix project delete button on safari

--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -523,9 +523,7 @@ header {
 }
 
 .edit-project-modal {
-  width: 100%;
   height: 2em;
-  position:fixed;
   z-index: 9999;
   transform: translate(0px, -2em);
   font-size: inherit;
